@@ -79,6 +79,7 @@ contrib/startup/debian/nxhttpd.in -text
 doc/RadenSolutions.xml -text
 doc/comparison_netxms_nnm.doc -text
 doc/integration/HPOM_Integration.docx -text
+doc/internal/NetworkDeviceDrivers.docx -text
 doc/internal/build.w64 -text
 doc/internal/db_driver_api.txt -text
 doc/internal/dci_perftab.txt -text
