@@ -37,7 +37,8 @@ public:
 	virtual const TCHAR *getName();
 	virtual const TCHAR *getVersion();
 
-	virtual bool isDeviceSupported(const TCHAR *oid);
+	virtual int isPotentialDevice(const TCHAR *oid);
+	virtual bool isDeviceSupported(SNMP_Transport *snmp, const TCHAR *oid);
 	virtual InterfaceList *getInterfaces(SNMP_Transport *snmp, StringMap *attributes, int useAliases, bool useIfXTable);
 };
 
