@@ -716,7 +716,7 @@ int SnmpGetInterfaceStatus(DWORD dwVersion, SNMP_Transport *pTransport, DWORD dw
 ROUTING_TABLE *SnmpGetRoutingTable(DWORD dwVersion, SNMP_Transport *pTransport);
 
 void LoadNetworkDeviceDrivers();
-NetworkDeviceDriver *FindDriverForNode(Node *node);
+NetworkDeviceDriver *FindDriverForNode(Node *node, SNMP_Transport *pTransport);
 
 void WatchdogInit();
 DWORD WatchdogAddThread(const TCHAR *szName, time_t tNotifyInterval);
